fix z-index

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -86,7 +86,6 @@ span {
   color: $color-primary-mid;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   position: relative;
-  z-index: 200;
 
   .brand {
     font-weight: 700;
@@ -130,6 +129,7 @@ span {
     padding: 2rem 1.5rem;
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
+    z-index: 999;
 
     &.is-open {
       transform: translateX(0);
